GROOVY-2197 Remove closing the inputstream from getResourceConnection(). Ensure that inputstream is closed in initGroovyLoader()
git-svn-id: http://svn.codehaus.org/groovy/trunk/groovy/groovy-core@8582 a5544e8c-8a19-0410-ba12-f9af4593a198